--- a/.github/workflows/sql-manual.yml
+++ b/.github/workflows/sql-manual.yml
@@ -28,3 +28,18 @@ jobs:
     # Runs a single command using the runners shell
     - name: Send greeting
       run: echo "Hello ${{ github.event.inputs.name }}"
+
+    - name: Azure SQL Deploy
+      uses: Azure/sql-action@v1.3
+      with:
+        # The connection string, including authentication information, for the Azure SQL Server database.
+        connection-string: ${{ secrets.IAAS_VM_SQL }} 
+        
+        
+    - name: SQL Version
+      run: |
+        echo "SQL Version via sqlcmd"
+        sqlcmd -S ${{ SQL_SERVER }} -U ${{ SQL_USER }} -P ${{ SQL_SECRET }} -Q "SELECT @@version"
+        
+        
+        
