--- a/.github/workflows/sql-manual.yml
+++ b/.github/workflows/sql-manual.yml
@@ -25,9 +25,10 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Runs a single command using the runners shell
-    - name: Send greeting
-      run: echo "Hello ${{ github.event.inputs.name }}"
+    - name: Setup .NET Core SDK
+      uses: actions/setup-dotnet@v2.1.0
+      with:
+        dotnet-version: 5.0.x
     
     - uses: actions/checkout@v1
 
